--- a/My Setups/001-Slate/bumblebee-status/bumblebee-status.conf
+++ b/My Setups/001-Slate/bumblebee-status/bumblebee-status.conf
@@ -1,12 +1,8 @@
 [core]
-# modules = pulsectl,apt,vpn,docker_ps,nic,memory,cpu,disk,time,date,system
-# modules = vpn,docker_ps,nic,memory,cpu,disk,time,date,system
-modules = vpn,nic,memory,cpu,disk,time,date,system
+modules = caffeine,pihole,docker_ps,apt,nic,memory,cpu,disk,time,date,system
 
 # autohide = <comma-separated list of modules to hide, unless in warning/error state>
-# theme = iceberg-powerline
 theme = gruvbox-powerline-light
-
 
 [module-parameters]
 date.format=%a, %b %d %Y
@@ -18,3 +14,5 @@ memory.warning=75
 memory.critical=85
 memory.format={used}
 nic.include=eth0,eth1
+pihole.address=http://192.168.1.100:8888
+pihole.apitoken=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
